--- a/frontend/src/app/admin/secretaries/secretaries.component.html
+++ b/frontend/src/app/admin/secretaries/secretaries.component.html
@@ -2,125 +2,54 @@
     <div class="search-hero">
         <input class="form-control" type="text" name="search" [(ngModel)]="searchSecretary" autocomplete="off" placeholder="Chercher une sécretaire . . .">
     </div>
-    <!-- List all doctors -->
+    <!-- List all Secretaries -->
     <div class="row">
-        <div class="col-md-3 col-sm-6 item">
-            <div class="card item-card card-block" data-toggle="modal" data-target="#addSecretary">
-                <img src="assets/add2.png" alt="Photo of sunset" class="add-img">
-            </div>
-        </div>
         <div class="col-md-3 col-sm-6 item" *ngFor="let secretary of secretaries | filter:searchSecretary">
-            <div class="card item-card card-block" data-toggle="modal" data-target="#SecretaryModal">
+            <div class="card item-card card-block" data-toggle="modal" data-target="#SecretaryModal" (click)="SecretaryInfo(secretary)">
                 <img src="assets/secretaryy.png" alt="Photo of sunset">
-                <h5 class="item-card-title mt-3 mb-3">{{secretary.id_user.nom | uppercase}} {{secretary.id_user.prenom | uppercase}}</h5>
+                <h5 class="item-card-title mt-3 mb-3 text-center">{{secretary.nom | uppercase}} {{secretary.prenom | uppercase}}</h5>
             </div>
             <!-- Modal Secretary -->
-            <div class="modal fade" id="SecretaryModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+            <div class="modal fade" id="SecretaryModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true" *ngIf="mySecretary">
                 <div class="modal-dialog modal-dialog-centered" role="document">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h5 class="modal-title" id="exampleModalLongTitle ">DR {{secretary.id_user.nom | uppercase}} {{secretary.id_user.prenom | uppercase}}</h5>
+                            <h5 class="modal-title" id="exampleModalLongTitle ">{{mySecretary.nom | uppercase}} {{mySecretary.prenom | uppercase}}</h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                               <span aria-hidden="true">&times;</span>
                             </button>
                         </div>
                         <div class="modal-body">
                             <ul class="list-group list-group-flush">
-                                <li class="list-group-item"><i class="fa fa fa-envelope-o" aria-hidden="true "></i>&nbsp;<b>Email : </b>{{secretary.id_user.email}}</li>
+                                <li class="list-group-item"><i class="fa fa fa-envelope-o" aria-hidden="true"></i>&nbsp;<b>Email : </b>{{mySecretary.email}}</li>
+                                <li class="list-group-item" *ngIf='mySecretary.numtel'><i class="fa fa-phone" aria-hidden="true"></i>&nbsp;<b>Numéro de téléphone : </b>{{mySecretary.numtel}}</li>
                             </ul>
+                            <div *ngIf='mySecretary.id_doctor != null; else EmptyDoctor'>
+                                <div class="alert alert-info mt-2 text-center" role="alert">
+                                    Docteur associée
+                                </div>
+                                <li class="list-group-item"><i class="fa fa fa-user" aria-hidden="true "></i>&nbsp;<b>Nom et prénom : </b>Dr.{{mySecretary.id_doctor.nom}} {{mySecretary.id_doctor.prenom}}</li>
+                                <li class="list-group-item"><i class="fa fa fa-envelope-o" aria-hidden="true "></i>&nbsp;<b>Email : </b>{{mySecretary.id_doctor.email}}</li>
+                            </div>
+                            <ng-template #EmptyDoctor>
+                                <div class="alert alert-danger mt-2 text-center" role="alert">
+                                    Pas de docteur associée
+                                </div>
+                            </ng-template>
                         </div>
                         <div class="modal-footer">
-                            <button type="button" class="btn btn-info" data-toggle="modal" data-target="#addSecretary" data-dismiss="modal" (click)='updateSecretary(secretary)'>Modifier</button>
-                            <button type="button" class="btn btn-danger" (click)='deleteD(secretary.id_user._id)' data-dismiss="modal">Supprimer</button>
+                            <button type="button" class="btn btn-danger" (click)='deleteD(mySecretary._id)' data-dismiss="modal">Supprimer</button>
                         </div>
                     </div>
                 </div>
             </div>
             <!-- End Modal Secretary -->
         </div>
-         <!-- Modal Add Secretary -->
-        <div class="modal fade" id="addSecretary" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-            <div class="modal-dialog modal-dialog-centered" role="document">
-                <div class="modal-content">
-                    <form #f="ngForm" (ngSubmit)="onSubmit(f)" novalidate *ngIf="!modify; else elseBlock">
-                        <div class="modal-header">
-                            <h5 class="modal-title" id="exampleModalLongTitle">Ajouter secretaire</h5>
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                      <span aria-hidden="true">&times;</span>
-                    </button>
-                        </div>
-                        <div class="modal-body">
-                            <div class="border-light">
-                                <div class="card-body">
-                                    <div class="form-group">
-                                        <label for="exampleInputEmail1">Nom</label>
-                                        <input type="input" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Entrer nom secretaire" name="name" ngModel>
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="exampleInputEmail1">Prénom</label>
-                                        <input type="input" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Entrer prénom secretaire" name="fname" ngModel>
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="exampleInputEmail1">Email</label>
-                                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Entrer email secretaire" name="email" ngModel>
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="exampleInputPassword1">Mot de passe</label>
-                                        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" name="password" ngModel>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="modal-footer">
-                            <button type="submit" class="btn btn-success">Ajouter</button>
-                        </div>
-                    </form>
-                    <ng-template #elseBlock>
-                        <form #f="ngForm" (ngSubmit)="onUpdate(f,secretary)" novalidate>
-                            <div class="modal-header">
-                                <h5 class="modal-title" id="exampleModalLongTitle">Modifier secretaire</h5>
-                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                              </button>
-                            </div>
-                            <div class="modal-body">
-                                <div class="border-light">
-                                    <div class="card-body">
-                                        <div class="form-group">
-                                            <label for="exampleInputEmail1">Nom</label>
-                                              <input type="input" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Entrer nom sécretaire" name="name" [(ngModel)]="secretary.id_user.nom">
-                                        </div>
-                                        <div class="form-group">
-                                            <label for="exampleInputEmail1">Prénom</label>
-                                            <input type="input" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Entrer prénom sécretaire" name="fname" [(ngModel)]="secretary.id_user.prenom">
-                                        </div>
-
-                                        <div class="form-group">
-                                            <label for="exampleInputEmail1">Email</label>
-                                            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Entrer email sécretaire" name="email" [(ngModel)]="secretary.id_user.email">
-                                        </div>
-                                        <div class="form-group">
-                                            <label for="exampleInputPassword1">Mot de passe</label>
-                                            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" name="password" [(ngModel)]="secretary.id_user.password">
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="modal-footer">
-                                <button type="submit" class="btn btn-success">Modifier</button>
-                            </div>
-                        </form>
-                    </ng-template>
-                </div>
-            </div>
-        </div>
-        <!-- End Modal Add Doctor -->
     </div>
     <div class="jumbotron jumbotron-fluid mt-5" *ngIf="!secretaries?.length">
         <div class=" container ">
             <h1 class="display-4 ">Vous n'avez pas de secretaires</h1>
-            <p class="lead ">Vous pouvez ajouter une nouvelle secretaire.</p>
         </div>
     </div>
-    <!-- End List all doctors -->
+    <!-- End List all Secretaries -->
 </div>
