--- a/frontend/src/app/admin/doctors/doctors.component.html
+++ b/frontend/src/app/admin/doctors/doctors.component.html
@@ -4,45 +4,57 @@
     </div>
     <!-- List all doctors -->
     <div class="row">
-        <div class="col-md-3 col-sm-6 item" *ngIf="( ad | filter:searchDoctor)?.length || !ad?.length">
+        <!-- <div class="col-md-3 col-sm-6 item" *ngIf="( ad | filter:searchDoctor)?.length || !ad?.length">
             <div class="card item-card card-block" data-toggle="modal" data-target="#AddDoctor">
                 <img src="assets/add2.png" alt="Photo of sunset" class="add-img">
             </div>
-        </div>
+        </div> -->
         <div class="col-md-3 col-sm-6 item" *ngFor="let doctor of ad | filter:searchDoctor">
-            <div class="card item-card card-block" data-toggle="modal" data-target="#DoctorModal">
+            <div class="card item-card card-block" data-toggle="modal" data-target="#DoctorModal" (click)="doctorInfo(doctor)">
                 <img src="assets/doctor-default.png" alt="Photo of sunset">
                 <h5 class="item-card-title mt-3 mb-3">Dr. {{doctor.nom}} {{doctor.prenom}}</h5>
                 <p class="card-text">{{doctor.bio | slice:0:100}}{{ doctor.bio.length > 100 ? ' ...' : '' }}</p>
             </div>
             <!-- Modal Doctor BIO -->
-            <div class="modal fade" id="DoctorModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+            <div class="modal fade" id="DoctorModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true" *ngIf="mydoctor">
                 <div class="modal-dialog modal-dialog-centered" role="document">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h5 class="modal-title" id="exampleModalLongTitle ">DR {{doctor.nom | uppercase}} {{doctor.prenom | uppercase}}</h5>
+                            <h5 class="modal-title" id="exampleModalLongTitle ">DR {{mydoctor.nom}} {{mydoctor.prenom}}</h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                               <span aria-hidden="true">&times;</span>
                             </button>
                         </div>
                         <div class="modal-body">
                             <ul class="list-group list-group-flush">
-                                <li class="list-group-item"><i class="fa fa-map-o" aria-hidden="true "></i>&nbsp;<b>Adresse : </b>{{doctor.adress.city}} ,{{doctor.adress.street}}, {{doctor.adress.zip}}</li>
-                                <li class="list-group-item"><i class="fa fa fa-envelope-o" aria-hidden="true "></i>&nbsp;<b>Email : </b>{{doctor.email}}</li>
-                                <li class="list-group-item"><i class="fa fa-venus-mars" aria-hidden="true "></i>&nbsp;<b>Sexe : </b>{{ doctor.man ? 'Homme' : 'Femme' }}</li>
-                                <li class="list-group-item"><i class="fa fa-medkit" aria-hidden="true "></i>&nbsp;<b>Spécialité : </b>{{doctor.spec}}</li>
+                                <li class="list-group-item"><i class="fa fa-map-o" aria-hidden="true "></i>&nbsp;<b>Adresse : </b>{{mydoctor.adress.city}} ,{{mydoctor.adress.street}}, {{mydoctor.adress.zip}}</li>
+                                <li class="list-group-item"><i class="fa fa fa-envelope-o" aria-hidden="true "></i>&nbsp;<b>Email : </b>{{mydoctor.email}}</li>
+                                <li class="list-group-item"><i class="fa fa-venus-mars" aria-hidden="true "></i>&nbsp;<b>Sexe : </b>{{ mydoctor.man ? 'Homme' : 'Femme' }}</li>
+                                <li class="list-group-item"><i class="fa fa-medkit" aria-hidden="true "></i>&nbsp;<b>Spécialité : </b>{{mydoctor.spec}}</li>
+                                <li class="list-group-item"><i class="fa fa-phone" aria-hidden="true "></i>&nbsp;<b>Numéro de téléphone : </b>{{mydoctor.numtel}}</li>
                             </ul>
+                            <div *ngIf='mydoctor.id_secrt != null; else EmptySecretary'>
+                                <div class="alert alert-info mt-2 text-center" role="alert">
+                                    Sécretaire associée
+                                </div>
+                                <li class="list-group-item"><i class="fa fa fa-user" aria-hidden="true "></i>&nbsp;<b>Nom et prénom : </b>{{mydoctor.id_secrt.nom}} {{mydoctor.id_secrt.prenom}}</li>
+                                <li class="list-group-item"><i class="fa fa fa-envelope-o" aria-hidden="true "></i>&nbsp;<b>Email : </b>{{mydoctor.id_secrt.email}}</li>
+                            </div>
+                            <ng-template #EmptySecretary>
+                                <div class="alert alert-danger mt-2 text-center" role="alert">
+                                    Pas de sécretaire associée
+                                </div>
+                            </ng-template>
                             <div class="text-center mt-2 mb-3">
                                 <h4>BIO</h4>
                             </div>
                             <div class="card border-light">
                                 <div class="card-body">
-                                    <samp>{{doctor.bio}}</samp>
+                                    <samp>{{mydoctor.bio}}</samp>
                                 </div>
                             </div>
                         </div>
                         <div class="modal-footer">
-                            <button type="button" class="btn btn-info updateDoctor" data-toggle="modal" data-target="#AddDoctor" data-dismiss="modal" (click)='updateDoctor(doctor)'>Modifier</button>
                             <button type="button" class="btn btn-danger" (click)='deleteD(doctor._id)' data-dismiss="modal">Supprimer</button>
                         </div>
                     </div>
@@ -51,7 +63,7 @@
             <!-- End Modal Doctor BIO -->
         </div>
         <!-- Modal Add Doctor -->
-        <div class="modal fade" id="AddDoctor" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <!-- <div class="modal fade" id="AddDoctor" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered" role="document">
                 <div class="modal-content">
                     <form #f="ngForm" (ngSubmit)="onSubmit(f)" novalidate *ngIf="!modify; else elseBlock">
@@ -196,7 +208,7 @@
                     </ng-template>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- End Modal Add Doctor -->
         <!-- Doctors not found -->
         <div *ngIf="!( ad | filter:searchDoctor)?.length && !emptyBool">
@@ -214,7 +226,7 @@
     <div class="jumbotron jumbotron-fluid mt-5" *ngIf="!ad?.length">
         <div class=" container ">
             <h1 class="display-4 ">Vous n'avez pas de docteurs</h1>
-            <p class="lead ">Vous pouvez ajouter un nouveau docteur.</p>
+            <p class="lead "></p>
         </div>
     </div>
     <!-- End List all doctors -->
