--- a/frontend/src/app/admin/claims/claims.component.html
+++ b/frontend/src/app/admin/claims/claims.component.html
@@ -6,22 +6,41 @@
 
     <div class="row">
         <div class="col-md-12 col-sm-12 item" *ngFor="let claim of claims | filter:searchClaim">
-            <div class="card mb-3" [ngClass]="(claim.answer == '')?'border-danger':'border-primary'">
-                <div class="card-header"><b>Réclamation de :</b> {{claim.id_patient.nom | uppercase}} {{claim.id_patient.prenom | uppercase}}</div>
+            <div class="card mb-3" [ngClass]="(claim.answer == '')?'border-danger':'border-success'">
+                <div class="card-header"><b [ngClass]="(claim.answer == '')?'text-danger':'text-success'">Réclamation de :</b> {{claim.id_patient.nom | uppercase}} {{claim.id_patient.prenom | uppercase}}</div>
                 <div class="card-body">
-                    <h5 class="card-title">Primary card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <b class="card-title">Objet du réclamation :</b>
+                    <p>{{claim.objectif}}</p>
+                    <b class="card-title">Contenue du réclamation:</b>
+                    <p>{{claim.description}}</p>
+                    <div *ngIf="claim.answer != ''">
+                        <hr>
+                        <b class="card-title">Votre réponse:</b>
+                        <p>{{claim.answer}}</p>
+                    </div>
+                </div>
+                <div class="card-footer" *ngIf="claim.answer == ''">
+                    <form #f="ngForm" (ngSubmit)="onSubmit(f,claim._id)">
+                        <input type="text" class="form-control" name="answer" placeholder="Votre réponse" ngModel>
+                        <button class="btn btn-danger float-right mt-2" type="submit">Répondre</button>
+                    </form>
                 </div>
             </div>
         </div>
     </div>
 
-    <!-- <div class="jumbotron jumbotron-fluid mt-5">
+    <div class="jumbotron jumbotron-fluid mt-2" *ngIf="!( claims | filter:searchClaim)?.length && !emptyBool">
         <div class=" container text-center">
-            <h1 class="display-4 ">Vous n'avez pas de réclamation pour le moment</h1>
-            <p class="lead "></p>
+            <h1 class="display-4">Introuvable</h1>
+            <p class="lead">Vous n'avez pas de réclamation suite à votre recherche, réessayer à nouveau . . .</p>
         </div>
-    </div> -->
+    </div>
 
+    <div class="jumbotron jumbotron-fluid mt-2" *ngIf="!claims?.length">
+        <div class=" container text-center">
+            <h1 class="display-4">Vous n'avez pas de réclamation pour le moment</h1>
+            <p class="lead"></p>
+        </div>
+    </div>
     <!-- End List all claims -->
 </div>
