Fix delete claim

--- a/frontend/src/app/admin/dashboard/dashboard.component.html
+++ b/frontend/src/app/admin/dashboard/dashboard.component.html
@@ -1,3 +1,26 @@
-<h1 class="mt-4">Dashboaaaaaaaaard</h1>
-<p>The starting state of the menu will appear collapsed on smaller screens, and will appear non-collapsed on larger screens. When toggled using the button below, the menu will change.</p>
-<p>Make sure to keep all page content within the <code>#page-content-wrapper</code>. The top navbar is optional, and just for demonstration. Just create an element with the <code>#menu-toggle</code> ID which will toggle the menu when clicked.</p>
+<section class="py-4 mt-2">
+    <div class="row">
+        <div class="col-md-12">
+
+            <h1>Bootstrap 4 Cards</h1>
+
+            <!-- count blocks -->
+            <div class="p-0" id="card_counts">
+                <div class="row">
+                    <div class="col-sm-3">
+                        <div class="card card-inverse bg-inverse h-100 text-center pt-2">
+                            <div class="card-block card-title">
+                                <h1 class="mb-2"><i class="align-middle fa fa-trash-o"></i></h1>
+                                <h6 class="text-dark">56 Likes</h6>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+
+
