--- a/frontend/src/app/admin/claims/claims.component.html
+++ b/frontend/src/app/admin/claims/claims.component.html
@@ -7,14 +7,20 @@
     <div class="row">
         <div class="col-md-12 col-sm-12 item" *ngFor="let claim of claims | filter:searchClaim">
             <div class="card mb-3" [ngClass]="(claim.answer == '')?'border-danger':'border-success'">
-                <div class="card-header"><b [ngClass]="(claim.answer == '')?'text-danger':'text-success'">Réclamation de :</b> {{claim.id_patient.nom | uppercase}} {{claim.id_patient.prenom | uppercase}}</div>
+                <div class="card-header">
+                    <b [ngClass]="(claim.answer == '')?'text-danger':'text-success'">Réclamation de : </b> 
+                    <span>{{claim.id_patient.nom | uppercase}} {{claim.id_patient.prenom | uppercase}}</span>
+                    <button type="button" class="btn btn-labeled float-right" [ngClass]="(claim.answer == '')?'btn-outline-danger':'btn-outline-success'"
+                    (click)='deleteClaim(claim._id)'>
+                    <span class="btn-label"><i class="fa fa-trash-o"></i></span></button>
+                </div>
                 <div class="card-body">
                     <b class="card-title">Objet du réclamation :</b>
                     <p>{{claim.objectif}}</p>
                     <b class="card-title">Contenue du réclamation:</b>
                     <p>{{claim.description}}</p>
                     <div *ngIf="claim.answer != ''">
-                        <hr>
+                        <hr class="bg-success">
                         <b class="card-title">Votre réponse:</b>
                         <p>{{claim.answer}}</p>
                     </div>
