--- a/frontend/src/app/admin/dashboard/dashboard.component.html
+++ b/frontend/src/app/admin/dashboard/dashboard.component.html
@@ -1,25 +1,71 @@
-<section class="py-4 mt-2">
-    <div class="row">
-        <div class="col-md-12">
 
-            <h1>Bootstrap 4 Cards</h1>
-
-            <!-- count blocks -->
-            <div class="p-0" id="card_counts">
-                <div class="row">
-                    <div class="col-sm-3">
-                        <div class="card card-inverse bg-inverse h-100 text-center pt-2">
-                            <div class="card-block card-title">
-                                <h1 class="mb-2"><i class="align-middle fa fa-trash-o"></i></h1>
-                                <h6 class="text-dark">56 Likes</h6>
+<div class="container">
+    <section class="py-4 mt-2">
+        <div class="row">
+            <div class="col-md-12">
+                <h1 class="text-center mb-4">Vision générale sur votre plateforme Cabinet Medical</h1>
+                <!-- count blocks -->
+                <div class="p-0">
+                    <div class="row">
+                        <div class="col-sm-6 mt-2">
+                            <div class="card card-inverse bg-inverse h-100 text-center pt-2">
+                                <div class="card-block card-title">
+                                    <h1 class="mb-2"><i class="align-middle fa fa-user-md"></i></h1>
+                                    <h6 class="text-dark">Total docteurs</h6>
+                                    <h6 class="text-dark">{{doctors}}</h6>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-6 mt-2">
+                            <div class="card card-inverse bg-inverse h-100 text-center pt-2">
+                                <div class="card-block card-title">
+                                    <h1 class="mb-2"><i class="align-middle fa fa-users"></i></h1>
+                                    <h6 class="text-dark">Total sécretaires</h6>
+                                    <h6 class="text-dark">{{secretaries}}</h6>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-6 mt-2">
+                            <div class="card card-inverse bg-inverse h-100 text-center pt-2">
+                                <div class="card-block card-title">
+                                    <h1 class="mb-2"><i class="align-middle fa fa-user-o"></i></h1>
+                                    <h6 class="text-dark">Total patients</h6>
+                                    <h6 class="text-dark">{{patients}}</h6>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-6 mt-2">
+                            <div class="card card-inverse bg-inverse h-100 text-center pt-2">
+                                <div class="card-block card-title">
+                                    <h1 class="mb-2"><i class="align-middle fa fa-bullhorn"></i></h1>
+                                    <h6 class="text-dark">Total réclamations</h6>
+                                    <h6 class="text-dark">{{claims}}</h6>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-6 mt-2">
+                            <div class="card card-inverse bg-inverse h-100 text-center pt-2">
+                                <div class="card-block card-title">
+                                    <h1 class="mb-2"><i class="align-middle fa fa-calendar-o"></i></h1>
+                                    <h6 class="text-dark">Total rendez-vous en attente</h6>
+                                    <h6 class="text-dark">{{awaitedAppo}}</h6>
+                                </div>
+                            </div>
+                        </div> <div class="col-sm-6 mt-2">
+                            <div class="card card-inverse bg-inverse h-100 text-center pt-2">
+                                <div class="card-block card-title">
+                                    <h1 class="mb-2"><i class="align-middle fa fa-calendar-check-o"></i></h1>
+                                    <h6 class="text-dark">Total rendez-vous accépté</h6>
+                                    <h6 class="text-dark">{{acceptedAppoi}}</h6>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-</section>
+    </section>
+</div>
 
 
 
