--- a/frontend/src/app/admin/layout/layout.component.html
+++ b/frontend/src/app/admin/layout/layout.component.html
@@ -22,9 +22,9 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Admin</a>
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">ADMIN</a>
                         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="/">Log out</a>
+                            <a class="dropdown-item" href="/"><i class="fa fa-sign-out"></i>  Déconnexion</a>
                         </div>
                     </li>
                 </ul>
