--- a/frontend/src/app/doctor/layout/layout.component.html
+++ b/frontend/src/app/doctor/layout/layout.component.html
@@ -3,7 +3,7 @@
     <div class="bg-dark" id="sidebar-wrapper">
         <div class="sidebar-heading">ESPACE DOCTEUR</div>
         <div class="list-group list-group-flush">
-            <a routerLink="/admin/secretaries" class="list-group-item list-group-item-action bg-dark"><i class="fa fa-users" aria-hidden="true"></i>&nbsp; Liste des sécretaires</a>
+            <a routerLink="/doctor/secretaries" class="list-group-item list-group-item-action bg-dark"><i class="fa fa-users" aria-hidden="true"></i>&nbsp; Liste des sécretaires</a>
             <a href="#" class="list-group-item list-group-item-action bg-dark"><i class="fa fa-check-square-o" aria-hidden="true"></i>&nbsp; Mes consultations</a>
             <a href="#" class="list-group-item list-group-item-action bg-dark"><i class="fa fa-envelope-o" aria-hidden="true"></i>&nbsp; Mes messages</a>
         </div>
